fix hidden profile buttons on mobile account page

--- a/less/account.less
+++ b/less/account.less
@@ -91,6 +91,8 @@
 		}
 	}
 
+	margin-top: 200px;
+	
 	@media (min-width: @screen-md-min) {
 		margin-top: 300px;
 		
